cmake_minimum_required(VERSION 4.2)
project(BaitapCoSoLapTrinh C)

set(CMAKE_C_STANDARD 11)

add_executable(BaitapCoSoLapTrinh main.c
        "Luyện tập 1 - Chương 2/Bài 1.cpp"
        "Luyện tập 1 - Chương 2/Bài 2.cpp"
        "Luyện tập 1 - Chương 2/Bài 3.cpp"
        "Luyện tập 1 - Chương 2/Bài 4.cpp"
        "Luyện tập 1 - Chương 2/Bài 5.cpp"
        "Luyện tập 1 - Chương 2/Bài 6.cpp")
